test-policies-fail/variables-forward-reference/binding.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingAdmissionPolicyBinding
metadata:
  name: variables-forward-reference-binding
spec:
  policyName: variables-forward-reference
  validationActions: [Deny]
